[package]
name = "image-sorter"
version = "0.1.0"
authors = ["Shootertrex"]
edition = "2018"

[dependencies]
iced = { git = "https://github.com/hecrj/iced", features = ["image","async-std"] }
iced_winit = { git = "https://github.com/hecrj/iced", package = "iced_winit" }
sorter_backend = { path = "../image_backend" }